--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "args": "^2.0.0",
-    "conf": "^0.11.2",
-    "download": "^5.0.2",
-    "npm-name": "^3.0.0",
-    "rimraf": "^2.5.4"
+    "chalk": "^1.1.3",
+    "dext-core-utils": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
