--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   "devDependencies": {
     "eslint": "^3.6.1",
     "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2"
+    "eslint-plugin-import": "^2.0.0"
   }
 }
