--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "args": "^2.0.0",
     "chalk": "^1.1.3",
-    "dext-core-utils": "^0.2.1"
+    "dext-core-utils": "^0.2.1",
+    "ora": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^3.6.1",
