--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./cli.js",
   "scripts": {
-    "lint": "eslint cli.js"
+    "precommit": "lint-staged"
   },
   "bin": {
     "dpm": "./cli.js"
@@ -21,9 +21,15 @@
     "dext-core-utils": "^0.5.1",
     "ora": "^0.3.0"
   },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --trailing-comma es5 --single-quote --tab-width 4",
+      "git add"
+    ]
+  },
   "devDependencies": {
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb-base": "^8.0.0",
-    "eslint-plugin-import": "^1.16.0"
+    "husky": "^0.13.4",
+    "lint-staged": "^4.0.0",
+    "prettier": "^1.4.4"
   }
 }
